[📦 refactor] 코드 리펙토링 - 주석 추가 - 상품명 번역하게 수정